--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
+    "@types/three": "^0.150.1",
     "astro": "^2.3.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "three": "^0.151.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.58.0",
