--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@astrojs/tailwind": "^3.1.1",
     "@types/three": "^0.150.1",
     "astro": "^2.3.0",
-    "tailwindcss": "^3.3.1",
-    "three": "^0.151.3"
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.58.0",
