--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/three": "^0.150.1",
     "astro": "^2.3.0",
     "tailwindcss": "^3.3.1"
